--- a/HyuJokbo/HyuJokbo/Base.lproj/Main.storyboard
+++ b/HyuJokbo/HyuJokbo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="OHQ-We-Udl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="7xg-a3-66b">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -70,5 +70,174 @@
             </objects>
             <point key="canvasLocation" x="-1169" y="-181"/>
         </scene>
+        <!--Login View Controller-->
+        <scene sceneID="g0Y-uV-zgC">
+            <objects>
+                <viewController id="7xg-a3-66b" customClass="LoginViewController" customModule="HyuJokbo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="T6f-o0-aWG"/>
+                        <viewControllerLayoutGuide type="bottom" id="FsO-Hj-4g4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pEY-Ah-lzX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hyujokbo-img-logo" translatesAutoresizingMaskIntoConstraints="NO" id="HrQ-ez-Sw1">
+                                <rect key="frame" x="124" y="130" width="73" height="85"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="85" id="bEK-XT-z7w"/>
+                                    <constraint firstAttribute="width" constant="73" id="p4K-Zs-Tny"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nao-lf-64m">
+                                <rect key="frame" x="53" y="240" width="214" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="214" id="8io-vE-heG"/>
+                                    <constraint firstAttribute="height" constant="30" id="Efx-Sw-pFE"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XAz-kB-Nm5">
+                                <rect key="frame" x="53" y="275" width="214" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qrZ-hX-JtS">
+                                <rect key="frame" x="53" y="310" width="214" height="30"/>
+                                <color key="backgroundColor" red="0.98823529409999999" green="0.4039215686" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="11"/>
+                                <state key="normal" title="휴족보로 로그인">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <segue destination="OHQ-We-Udl" kind="show" id="juL-cp-2Y4"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JaD-Rw-vHe">
+                                <rect key="frame" x="53" y="412" width="214" height="30"/>
+                                <color key="backgroundColor" red="0.21960784310000001" green="0.3294117647" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="QcN-8R-cRB"/>
+                                    <constraint firstAttribute="width" constant="214" id="zhS-Hv-g4g"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="11"/>
+                                <state key="normal" title="facebook으로 로그인">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook-img-logo" translatesAutoresizingMaskIntoConstraints="NO" id="VI2-MG-hul">
+                                <rect key="frame" x="59" y="418" width="17" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="18" id="3hq-xy-H9S"/>
+                                    <constraint firstAttribute="width" constant="17" id="p6W-5h-tVW"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7KL-sS-D6t">
+                                <rect key="frame" x="53" y="448" width="214" height="30"/>
+                                <color key="backgroundColor" red="0.87450980389999999" green="0.2901960784" blue="0.1960784314" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="11"/>
+                                <state key="normal" title="Google로 로그인">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="google-img-logo" translatesAutoresizingMaskIntoConstraints="NO" id="zmD-8I-x1d">
+                                <rect key="frame" x="60" y="454" width="20" height="19"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="IlQ-3h-g9M"/>
+                                    <constraint firstAttribute="height" constant="19" id="w8m-7i-o4o"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MQ2-Tc-2g6">
+                                <rect key="frame" x="53" y="338" width="214" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Cie-Ok-cAW"/>
+                                    <constraint firstAttribute="width" constant="214" id="Ruq-Bv-aFG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="7"/>
+                                <state key="normal" title="아직 회원이 아니신가요? 회원가입">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="90u-34-8yX">
+                                <rect key="frame" x="152" y="370" width="16" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="16" id="YCj-IX-WNh"/>
+                                    <constraint firstAttribute="height" constant="21" id="bGb-6x-Nu5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="line" translatesAutoresizingMaskIntoConstraints="NO" id="vJm-5i-uGK">
+                                <rect key="frame" x="53" y="380" width="91" height="1"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="6Ht-nI-RBD"/>
+                                    <constraint firstAttribute="width" constant="91" id="DtL-nC-D5D"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="line" translatesAutoresizingMaskIntoConstraints="NO" id="Vdv-ip-p9Y">
+                                <rect key="frame" x="176" y="380" width="91" height="1"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="17o-cK-eEY"/>
+                                    <constraint firstAttribute="width" constant="91" id="HDM-yI-o0g"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="MQ2-Tc-2g6" firstAttribute="top" secondItem="qrZ-hX-JtS" secondAttribute="bottom" constant="-2" id="0Uj-kg-aCB"/>
+                            <constraint firstItem="VI2-MG-hul" firstAttribute="centerY" secondItem="JaD-Rw-vHe" secondAttribute="centerY" id="0a0-P1-m5B"/>
+                            <constraint firstItem="HrQ-ez-Sw1" firstAttribute="centerX" secondItem="pEY-Ah-lzX" secondAttribute="centerX" id="1kk-lp-OlL"/>
+                            <constraint firstItem="JaD-Rw-vHe" firstAttribute="centerX" secondItem="pEY-Ah-lzX" secondAttribute="centerX" id="2yU-cK-Xqz"/>
+                            <constraint firstItem="Nao-lf-64m" firstAttribute="top" secondItem="HrQ-ez-Sw1" secondAttribute="bottom" constant="25" id="3pE-7L-t2f"/>
+                            <constraint firstItem="7KL-sS-D6t" firstAttribute="centerX" secondItem="JaD-Rw-vHe" secondAttribute="centerX" id="5gP-rg-Db8"/>
+                            <constraint firstItem="MQ2-Tc-2g6" firstAttribute="centerX" secondItem="pEY-Ah-lzX" secondAttribute="centerX" id="9NK-XY-vZk"/>
+                            <constraint firstItem="7KL-sS-D6t" firstAttribute="leading" secondItem="zmD-8I-x1d" secondAttribute="trailing" constant="-27" id="9yY-YE-HUR"/>
+                            <constraint firstItem="zmD-8I-x1d" firstAttribute="centerY" secondItem="7KL-sS-D6t" secondAttribute="centerY" id="Dq9-dR-HZl"/>
+                            <constraint firstItem="vJm-5i-uGK" firstAttribute="centerY" secondItem="90u-34-8yX" secondAttribute="centerY" id="Ewn-AG-V0q"/>
+                            <constraint firstItem="Vdv-ip-p9Y" firstAttribute="centerY" secondItem="90u-34-8yX" secondAttribute="centerY" id="Fyf-Th-RnE"/>
+                            <constraint firstItem="7KL-sS-D6t" firstAttribute="top" secondItem="JaD-Rw-vHe" secondAttribute="bottom" constant="6" id="HzC-bo-WMY"/>
+                            <constraint firstItem="90u-34-8yX" firstAttribute="leading" secondItem="vJm-5i-uGK" secondAttribute="trailing" constant="8" id="K2N-Uk-tiT"/>
+                            <constraint firstItem="Vdv-ip-p9Y" firstAttribute="leading" secondItem="90u-34-8yX" secondAttribute="trailing" constant="8" id="Oy6-P3-N0W"/>
+                            <constraint firstItem="qrZ-hX-JtS" firstAttribute="centerX" secondItem="pEY-Ah-lzX" secondAttribute="centerX" id="UZS-g8-Pf3"/>
+                            <constraint firstItem="7KL-sS-D6t" firstAttribute="width" secondItem="JaD-Rw-vHe" secondAttribute="width" id="WHS-sA-UV3"/>
+                            <constraint firstItem="qrZ-hX-JtS" firstAttribute="width" secondItem="XAz-kB-Nm5" secondAttribute="width" id="Z2F-4u-gvj"/>
+                            <constraint firstItem="XAz-kB-Nm5" firstAttribute="height" secondItem="Nao-lf-64m" secondAttribute="height" id="csb-84-NN9"/>
+                            <constraint firstItem="XAz-kB-Nm5" firstAttribute="width" secondItem="Nao-lf-64m" secondAttribute="width" id="dFz-SG-ryc"/>
+                            <constraint firstItem="90u-34-8yX" firstAttribute="centerX" secondItem="pEY-Ah-lzX" secondAttribute="centerX" id="eDd-Kl-hHO"/>
+                            <constraint firstItem="qrZ-hX-JtS" firstAttribute="top" secondItem="XAz-kB-Nm5" secondAttribute="bottom" constant="5" id="eEp-YU-sP4"/>
+                            <constraint firstItem="JaD-Rw-vHe" firstAttribute="leading" secondItem="VI2-MG-hul" secondAttribute="trailing" constant="-23" id="el3-ed-85a"/>
+                            <constraint firstItem="XAz-kB-Nm5" firstAttribute="centerX" secondItem="pEY-Ah-lzX" secondAttribute="centerX" id="fVw-9o-g55"/>
+                            <constraint firstItem="XAz-kB-Nm5" firstAttribute="top" secondItem="Nao-lf-64m" secondAttribute="bottom" constant="5" id="gaf-F6-v1c"/>
+                            <constraint firstItem="7KL-sS-D6t" firstAttribute="height" secondItem="JaD-Rw-vHe" secondAttribute="height" id="ni9-oO-CTx"/>
+                            <constraint firstItem="qrZ-hX-JtS" firstAttribute="height" secondItem="XAz-kB-Nm5" secondAttribute="height" id="s62-Ao-VZU"/>
+                            <constraint firstItem="JaD-Rw-vHe" firstAttribute="top" secondItem="qrZ-hX-JtS" secondAttribute="bottom" constant="72" id="uhz-MH-voS"/>
+                            <constraint firstItem="Nao-lf-64m" firstAttribute="centerX" secondItem="pEY-Ah-lzX" secondAttribute="centerX" id="v6o-5u-FEk"/>
+                            <constraint firstItem="HrQ-ez-Sw1" firstAttribute="top" secondItem="T6f-o0-aWG" secondAttribute="bottom" constant="110" id="w4j-i0-N92"/>
+                            <constraint firstItem="90u-34-8yX" firstAttribute="top" secondItem="MQ2-Tc-2g6" secondAttribute="bottom" constant="2" id="xr6-oH-8jv"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="EmailTextField" destination="Nao-lf-64m" id="32t-jd-QUu"/>
+                        <outlet property="FacebookContinueButton" destination="JaD-Rw-vHe" id="efs-H9-5Gn"/>
+                        <outlet property="GoogleContinueButton" destination="7KL-sS-D6t" id="2LP-rm-c9B"/>
+                        <outlet property="HyuJokboContinueButton" destination="qrZ-hX-JtS" id="iEl-4O-kcL"/>
+                        <outlet property="HyuJokboLogo" destination="HrQ-ez-Sw1" id="tt5-cW-imu"/>
+                        <outlet property="PasswordTextField" destination="XAz-kB-Nm5" id="ft4-gc-6yb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zhH-Tu-UKw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3189" y="-641"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="facebook-img-logo" width="16" height="16"/>
+        <image name="google-img-logo" width="16" height="16"/>
+        <image name="hyujokbo-img-logo" width="16" height="16"/>
+        <image name="line" width="16" height="16"/>
+    </resources>
 </document>
