--- a/HyuJokbo/HyuJokbo/JokboTabUploadStoryboard.storyboard
+++ b/HyuJokbo/HyuJokbo/JokboTabUploadStoryboard.storyboard
@@ -16,7 +16,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Vvr-CH-m0P">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="barTintColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
